@@ -1,0 +1,5 @@
+# This file lists all accessible join 'standard' modules. -*- Makefile -*-
+# It is used to know what to expunge in toplevels.
+# $Id$
+
+STDJOIN_MODULES=join proc
